/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.multiraft.v1;

import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";

message MultiRaftEvent {
    google.protobuf.Timestamp timestamp = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.stdtime) = true
    ];
    oneof event {
        MemberReadyEvent member_ready = 2;
        LeaderUpdatedEvent leader_updated = 3;
        MembershipChangedEvent membership_changed = 4;
        SendSnapshotStartedEvent send_snapshot_started = 5;
        SendSnapshotCompletedEvent send_snapshot_completed = 6;
        SendSnapshotAbortedEvent send_snapshot_aborted = 7;
        SnapshotReceivedEvent snapshot_received = 8;
        SnapshotRecoveredEvent snapshot_recovered = 9;
        SnapshotCreatedEvent snapshot_created = 10;
        SnapshotCompactedEvent snapshot_compacted = 11;
        LogCompactedEvent log_compacted = 12;
        LogDBCompactedEvent logdb_compacted = 13;
        ConnectionEstablishedEvent connection_established = 14;
        ConnectionFailedEvent connection_failed = 15;
    }
}

message PartitionEvent {
    uint32 partition_id = 1 [
        (gogoproto.customname) = "PartitionID",
        (gogoproto.casttype) = "PartitionID"
    ];
}

message MemberReadyEvent {
    PartitionEvent partition = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
}

message MembershipChangedEvent {
    PartitionEvent partition = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
}

message LeaderEvent {
    PartitionEvent partition = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
    uint64 term = 2 [
        (gogoproto.casttype) = "Term"
    ];
    uint64 leader = 3 [
        (gogoproto.casttype) = "NodeID"
    ];
}

message LeaderUpdatedEvent {
    LeaderEvent leader = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
}

message SnapshotEvent {
    PartitionEvent partition = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
    uint64 index = 2 [
        (gogoproto.casttype) = "Index"
    ];
}

message SendSnapshotStartedEvent {
    SnapshotEvent snapshot = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
    uint64 to = 2 [
        (gogoproto.casttype) = "NodeID"
    ];
}

message SendSnapshotCompletedEvent {
    SnapshotEvent snapshot = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
    uint64 to = 2 [
        (gogoproto.casttype) = "NodeID"
    ];
}

message SendSnapshotAbortedEvent {
    SnapshotEvent snapshot = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
    uint64 to = 2 [
        (gogoproto.casttype) = "NodeID"
    ];
}

message SnapshotReceivedEvent {
    SnapshotEvent snapshot = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
    uint64 from = 2 [
        (gogoproto.casttype) = "NodeID"
    ];
}

message SnapshotRecoveredEvent {
    SnapshotEvent snapshot = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
}

message SnapshotCreatedEvent {
    SnapshotEvent snapshot = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
}

message SnapshotCompactedEvent {
    SnapshotEvent snapshot = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
}

message LogEvent {
    PartitionEvent partition = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
    uint64 index = 2 [
        (gogoproto.casttype) = "Index"
    ];
}

message LogCompactedEvent {
    LogEvent log = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
}

message LogDBCompactedEvent {
    LogEvent log = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
}

message ConnectionEvent {
    string address = 1;
    bool snapshot = 2;
}

message ConnectionEstablishedEvent {
    ConnectionEvent connection = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
}

message ConnectionFailedEvent {
    ConnectionEvent connection = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
}
